--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "hashids/hashids": "^1.0"
     },
     "require-dev": {
-        "phpunit/PHPUnit": "4.7.*",
+        "phpunit/phpunit": "5.2.*",
         "zendframework/zftool": "dev-master",
         "zendframework/zend-developer-tools": "dev-master",
         "zfcampus/zf-apigility-admin": "^1.3.1",
