Update coposer and add new traits for entities

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "zfcampus/zf-apigility-doctrine": "^1.0",
         "doctrine/doctrine-orm-module": "^0.9.1",
         "zfr/zfr-cors": "1.*",
-        "hashids/hashids": "^1.0"
+        "hashids/hashids": "^1.0",
+        "doctrine/data-fixtures": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "5.2.*",
