--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "BSD-3-Clause",
     "require": {
         "php": ">=5.5",
-        "zendframework/zendframework": "~2.4",
+        "zendframework/zendframework": "2.5",
         "zendframework/zend-ldap": "^2.5",
         "zfcampus/zf-apigility": "~1.1",
         "zfcampus/zf-apigility-documentation": "^1.0.5",
